--- a/example/loadImg.html
+++ b/example/loadImg.html
@@ -4,7 +4,74 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<body><!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+
 <body>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+</body>
+<script src="../src/ec-do-3.0.0-beta.1.js"></script>
+<script>
+    window.onload = function () {
+        //根据load-img 这个 class 遍历，距离 页面底部 100像素的时候就开始加载，加载错误就显示error.jpg
+        ecDo.loadImg('load-img',function () {
+            console.log('加载完毕')
+        });
+    }
+</script>
+
+</html>
 
 </body>
 </html>
