--- a/example/loadImg.html
+++ b/example/loadImg.html
@@ -13,53 +13,53 @@
 </head>
 
 <body>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//anglida/5972aaf3Ndba2c0c0.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//anglida/5972aaf3Ndba2c0c0.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//bkstage/79e9b573a23f51c5.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//anglida/anglida_cj_bg_mobile.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//meiye-pc/meiye1.jpg" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//picwall/big_pic.png" class="load-img" /></p>
+<p><img data-src="http://img6.zhaoyl.com//picwall/ss.png" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" /></p>
 </body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
