--- a/example/loadImg.html
+++ b/example/loadImg.html
@@ -14,17 +14,20 @@
 
 <body>
 <p><img src="lawyerOtherImg.jpg"/></p>
-<p><img data-src="https://materialdb.zhaoyl.com/201809/105567.jpg" class="load-img" /></p>
-<p><img data-src="https://materialdb.zhaoyl.com/201809/106796.jpg" class="load-img" /></p>
-<p><img data-src="https://materialdb.zhaoyl.com/201809/103097.jpg" class="load-img" /></p>
-<p><img data-src="https://materialdb.zhaoyl.com/201809/10205.jpg" class="load-img" /></p>
-<p><img data-src="https://materialdb.zhaoyl.com/201809/001.jpg" class="load-img" /></p>
+<p>这是预加载的图片</p>
+<div>
+    <img data-src="https://materialdb.zhaoyl.com/201809/106796.jpg" class="load-img" width="100" height="100"/><img
+        data-src="https://materialdb.zhaoyl.com/201809/105567.jpg" class="load-img" width="100" height="100"/><img
+        data-src="https://materialdb.zhaoyl.com/201809/103097.jpg" class="load-img" width="100" height="100"/><img
+        data-src="https://materialdb.zhaoyl.com/201809/10205.jpg" class="load-img" width="100" height="100"/><img
+        data-src="https://materialdb.zhaoyl.com/201809/001.jpg" class="load-img" width="100" height="100"/>
+</div>
 </body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
+    //测试请先清空缓存
     window.onload = function () {
-        //根据load-img 这个 class 遍历，距离 页面底部 100像素的时候就开始加载，加载错误就显示error.jpg
-        ecDo.loadImg('load-img',function () {
+        ecDo.loadImg('load-img', function () {
             console.log('加载完毕')
         });
     }
