--- a/example/lazyLoadImg.html
+++ b/example/lazyLoadImg.html
@@ -13,54 +13,15 @@
 </head>
 
 <body>
-<p><img data-src="lawyerOtherImg1.jpg" class="load-img" width='528' height='304'/></p>
+<!--<p><img data-src="lawyerOtherImg1.jpg" class="load-img" width='528' height='304'/></p>-->
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
-<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="https://materialdb.zhaoyl.com/201809/105567.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="https://materialdb.zhaoyl.com/201809/106796.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="https://materialdb.zhaoyl.com/201809/103097.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="https://materialdb.zhaoyl.com/201809/10205.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="https://materialdb.zhaoyl.com/201809/001.jpg" class="load-img" width='528' height='304'/></p>
 </body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
