--- a/example/lazyLoadImg.html
+++ b/example/lazyLoadImg.html
@@ -27,9 +27,9 @@
 <script>
     window.onload = function () {
         //根据load-img 这个 class 遍历，距离 页面底部 100像素的时候就开始加载，加载错误就显示error.jpg
-        ecDo.delayFn(ecDo.lazyLoadImg('load-img', 100, 'error.jpg'),100,200);
+        ecDo.throttle(ecDo.lazyLoadImg('load-img', 100, 'error.jpg'),100,200);
         window.onscroll = function () {
-            ecDo.delayFn(ecDo.lazyLoadImg('load-img', 100, 'error.jpg'),100,200);
+            ecDo.throttle(ecDo.lazyLoadImg('load-img', 100, 'error.jpg'),100,200);
         }
     }
 </script>
