添加 aftLoadImg demo 并且更新文档

--- a/example/aftLoadImg.html
+++ b/example/aftLoadImg.html
@@ -18,6 +18,7 @@
 </body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
+    //测试前请先清空缓存
     window.onload = function () {
         let oImg=document.getElementsByTagName('img');
         for(let i=0;i<oImg.length;i++){
