--- a/example/checkType.html
+++ b/example/checkType.html
@@ -7,19 +7,11 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
-    ecDo.checkType.check('18522622636', 'mobile').then(info => {
-        console.log(info)
-    }).catch(err => {
-        console.log(err)
-    });
+    console.log(ecDo.checkType.check('185226236', 'mobile'))
     ecDo.checkType.addRule('password', function (str) {
         return /^[-a-zA-Z0-9._]+$/.test(str);
     })
-    ecDo.checkType.check('asdasd654zxc', 'password').then(info => {
-        console.log(info)
-    }).catch(err => {
-        console.log(err)
-    });
+    console.log(ecDo.checkType.check('asdasd654zxc', 'password'))
 </script>
 </body>
 </html>
