修复 text 函数 bug 增加 text 函数 demo  dom.html

--- a/example/dom.html
+++ b/example/dom.html
@@ -12,5 +12,6 @@
     let oDiv=document.querySelector('.div1');
     ecDo.html(oDiv,'我是守候').addClass(oDiv,'div2').replaceClass(oDiv,'div1','div3').css(oDiv,{'color':'#f00','background':'#ccc'})
     console.log(ecDo.hasClass(oDiv,'div6'))
+    ecDo.text(oDiv,'<div class="div6">9998</div>')
 </script>
 </html>
