--- a/example/getOptionArray.html
+++ b/example/getOptionArray.html
@@ -8,8 +8,11 @@
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
     let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
-    console.log(ecDo.getOptionArray(arr,'a,c'));
-    console.log(ecDo.getOptionArray(arr,'b'));
+    //已废除 getOptionArray
+//    console.log(ecDo.getOptionArray(arr,'a,c'));
+//    console.log(arr.map(item=>{return {a:item.a,v:item.c}}));
+//    console.log(ecDo.getOptionArray(arr,'b'));
+//    console.log(arr.map(item=>item.b));
 </script>
 </body>
 </html>
