--- a/example/sortByForKeys.html
+++ b/example/sortByForKeys.html
@@ -8,7 +8,7 @@
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
     let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
-    console.log(ecDo.arraySort(arr,'a,b'))//a是第一排序条件，b是第二排序条件
+    console.log(ecDo.sortByForKeys(arr,'a,b'))//a是第一排序条件，b是第二排序条件
 </script>
 </body>
 </html>
