--- a/example/checkType.html
+++ b/example/checkType.html
@@ -5,13 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<script src="../src/ec-do-3.0.0-beta.1.js"></script>
+<!--beta1版本-->
+<!--<script src="../src/ec-do-3.0.0-beta.1.js"></script>-->
+<!--<script>-->
+    <!--console.log(ecDo.checkType.check('185226236', 'mobile'))-->
+    <!--ecDo.checkType.addRule('password', function (str) {-->
+        <!--return /^[-a-zA-Z0-9._]+$/.test(str);-->
+    <!--})-->
+    <!--console.log(ecDo.checkType.check('asdasd654zxc', 'password'))-->
+<!--</script>-->
+<!--beta2版本-->
+<script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    console.log(ecDo.checkType.check('185226236', 'mobile'))
-    ecDo.checkType.addRule('password', function (str) {
+    console.log(ecDo.checkType('185226236', 'mobile'))
+    ecDoExtend.checkTypeRule.fn('password', function (str) {
         return /^[-a-zA-Z0-9._]+$/.test(str);
     })
-    console.log(ecDo.checkType.check('asdasd654zxc', 'password'))
+    console.log(ecDo.checkType('asdasd654zxc', 'password'))
 </script>
 </body>
 </html>
