修改 filterStr 函数

--- a/example/filterStr.html
+++ b/example/filterStr.html
@@ -24,10 +24,10 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(`过滤字符|${ecDo.filterStr('sadasdasdzxc4512235%$@^&^@*!(4613zxc','specialStr','','@')}|`);
-    ecDoExtend.filterStr.fn('english',function (str,replaceStr='') {
+    ecDo.extend.filterStr('english',function (str,replaceStr='') {
         return str.replace(/[a-zA-Z]/g, replaceStr);
     });
-    console.log(ecDo.filterStr('asdasd46撒打算的','english','.',''));
+    console.log(ecDo.filterStr('asdasd46撒打算的','english','.'));
 
 
     console.log(ecDo.filterSpecialStr('sadasdasdzxc4512235%$@^&^@*!(4613zxcasdasd46撒打算的','','@'));
