beta2 增加 开放-封闭封装

--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -313,7 +313,7 @@
         },
         mounted:function () {
 //            //添加扩展规则
-//            ecValidate.addRule('isChinese',function (val, msg) {
+//            ecValidate.extend('isChinese',function (val, msg) {
 //                return !/^[\u4E00-\u9FA5]+$/.test(val) ? msg : '';
 //            })
         }
