demo 全部调用 beta2版本

--- a/example/clone.html
+++ b/example/clone.html
@@ -5,10 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<script src="../src/ec-do-3.0.0-beta.1.js"></script>
+<script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
-    console.log(ecDo.sortByForKeys(arr,'a,b'))//a是第一排序条件，b是第二排序条件
+    let arrNew=ecDo.clone(arr);
+    arrNew[0].a=2;
+    console.log(arrNew[0]);
+    console.log(arr[0]);
 </script>
 </body>
 </html>
