--- a/example/max-min-sum-average-arr.html
+++ b/example/max-min-sum-average-arr.html
@@ -7,7 +7,10 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    console.log(ecDo.checkPwdLevel('asd188AS19663362_.'));
+    console.log(ecDo.max([1,2,3,4,5,6]));
+    console.log(ecDo.min([1,2,3,4,5,6]));
+    console.log(ecDo.average([1,2,3,4,5,6]));
+    console.log(ecDo.sum([1,2,3,4,5,6]));
 </script>
 </body>
 </html>
