--- a/example/getRandom.html
+++ b/example/getRandom.html
@@ -7,7 +7,8 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    console.log(ecDo.checkPwdLevel('asd188AS19663362_.'));
+    console.log(ecDo.getRandom([1,2,3,4,5,6]));
+    console.log(ecDo.getRandom([1,2,3,4,5,6],4));
 </script>
 </body>
 </html>
