--- a/example/sortBy.html
+++ b/example/sortBy.html
@@ -7,7 +7,8 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    console.log(ecDo.checkPwdLevel('asd188AS19663362_.'));
+    let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
+    console.log(ecDo.sortBy(arr,'a,b'))//a是第一排序条件，b是第二排序条件
 </script>
 </body>
 </html>
