--- a/example/upset.html
+++ b/example/upset.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<script src="../src/ec-do-3.0.0-beta.1.js"></script>
+<script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    console.log(ecDo.upsetArr([1,2,3,4,5,6]));
+    console.log(ecDo.upset([1,2,3,4,5,6]));
 </script>
 </body>
 </html>
