优化 filterSpecialStr 函数

--- a/example/filterStr.html
+++ b/example/filterStr.html
@@ -30,7 +30,7 @@
     console.log(ecDo.filterStr('asdasd46撒打算的','english','.'));
 
 
-    console.log(ecDo.filterSpecialStr('sadasdasdzxc4512235%$@^&^@*!(4613zxcasdasd46撒打算的','','@'));
+    console.log(ecDo.filterSpecialStr('sadasdasdzxc4512235%$@^&^@*!(4613zxcasdasd46撒打算的','','@^'));
     console.log(ecDo.filterHtml('<title>Title</title>'));
     console.log(ecDo.filterWordUpper('asdasdWECASasd'));
     console.log(ecDo.filterWordLower('asdasdWECASasd'));
