--- a/example/setKeys.html
+++ b/example/setKeys.html
@@ -8,6 +8,7 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(ecDo.setKeys({a:'',b:0,c:11},[0,'',11],'**'));
+    console.log(ecDo.setKeys({a:'',b:0,c:11,d:NaN},[0,'',NaN]));
 </script>
 </body>
 </html>
