isType 增加多个数值判断功能

--- a/example/isType.html
+++ b/example/isType.html
@@ -9,6 +9,7 @@
 <script>
     console.log(ecDo.isType([1,2,3,4,5,6]));
     console.log(ecDo.isType([1,2,3,4,5,6],'array'));
+    console.log(ecDo.isType([123],'array,number'));
 </script>
 </body>
 </html>
