isType 优化返回值

--- a/example/isType.html
+++ b/example/isType.html
@@ -8,6 +8,7 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(ecDo.isType([1,2,3,4,5,6]));
+    console.log(ecDo.isType(1234));
     console.log(ecDo.isType([1,2,3,4,5,6],'array'));
     console.log(ecDo.isType([123],'array,number'));
 </script>
