--- a/example/filterKeys.html
+++ b/example/filterKeys.html
@@ -8,8 +8,10 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}];
-    console.log(ecDo.filterOptionArray(arr,'a'));
-    console.log(ecDo.filterOptionArray(arr,'a,c'));
+    console.log(ecDo.filterKeys(arr,'a'));
+    console.log(ecDo.filterKeys(arr,'a,c'));
+
+    console.log(ecDo.filterKeys({a:1,b:2,c:9},'a'));
 </script>
 </body>
 </html>
