--- a/example/findKeyword.html
+++ b/example/findKeyword.html
@@ -15,7 +15,7 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     let oDiv=document.querySelector('#content');
-    let _html=ecDo.findKey(ecDo.html(oDiv),'自己 我');
+    let _html=ecDo.findKeyword(ecDo.html(oDiv),'自己 我');
     ecDo.html(oDiv,_html);
 </script>
 </html>
