--- a/example/debounce.html
+++ b/example/debounce.html
@@ -12,8 +12,14 @@
         count++;
         console.log(count)
     }
+    let count2=1000;
+    function fn2(){
+        count2--;
+        console.log(count2)
+    }
     //鼠标移动事件触发，如果在300毫秒内连续触发事件，一直快速移动（时间间隔小于300毫秒），等到移动的时间间隔大于300毫秒的时候再执行。
     document.onmousemove=ecDo.debounce(fn1,300)
+    document.onclick=ecDo.debounce(fn2,300)
 </script>
 </body>
 </html>
