修复 throttle bug 更新文档

--- a/example/throttle.html
+++ b/example/throttle.html
@@ -12,8 +12,10 @@
          count++;
          console.log(count)
      }
-     //100ms内连续触发的调用，后一个调用会把前一个调用的等待处理掉，但每隔200ms至少执行一次
-     document.onmousemove=ecDo.throttle(fn1,100,200)
+     //100ms内连续触发的调用，后一个调用会把前一个调用的等待处理掉，
+     //屏蔽首次调用  {first:false}
+     //屏蔽最后一次调用  {last:false}
+     document.onmousemove=ecDo.throttle(fn1,1000,{first:false,last:false})
 </script>
 </body>
 </html>
