--- a/example/aftLoadImg.html
+++ b/example/aftLoadImg.html
@@ -19,7 +19,7 @@
 </body>
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    //测试前请先清空缓存
+    //测试前请先清空缓存，调低网络速度
     window.onload = function () {
         let oImg=document.getElementsByTagName('img');
         for(let i=0;i<oImg.length;i++){
