--- a/example/isType.html
+++ b/example/isType.html
@@ -11,6 +11,7 @@
     console.log(ecDo.isType(1234));
     console.log(ecDo.isType([1,2,3,4,5,6],'array'));
     console.log(ecDo.isType([123],'array,number'));
+    console.log(ecDo.isType(123,'array,number'));
 </script>
 </body>
 </html>
