--- a/example/clone.html
+++ b/example/clone.html
@@ -7,7 +7,9 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
-    let arr=[{a:1,b:2,c:9},{a:2,b:3,c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
+    let arr=[{a:null,b:undefined,c:9},{a:2,b:function () {
+        
+    },c:5},{a:5,b:9},{a:4,b:2,c:5},{a:4,b:5,c:7}]
     let arrNew=ecDo.clone(arr);
     arrNew[0].a=2;
     console.log(arrNew[0]);
