--- a/example/dom.html
+++ b/example/dom.html
@@ -7,11 +7,11 @@
 <body>
 <div class="div1"></div>
 </body>
-<script src="../src/ec-do-3.0.0-beta.2.js"></script>
+<script src="../src/ec`-do-3.0.0-beta.2.dom.js"></script>
 <script>
     let oDiv=document.querySelector('.div1');
-    ecDo.html(oDiv,'我是守候').addClass(oDiv,'div2').replaceClass(oDiv,'div1','div3').css(oDiv,{'color':'#f00','background':'#ccc'})
-    console.log(ecDo.hasClass(oDiv,'div6'))
-    ecDo.text(oDiv,'<div class="div6">9998</div>')
+    ecDom.html(oDiv,'我是守候').addClass(oDiv,'div2').replaceClass(oDiv,'div1','div3').css(oDiv,{'color':'#f00','background':'#ccc'})
+    console.log(ecDom.hasClass(oDiv,'div6'))
+    ecDom.text(oDiv,'<div class="div6">9998</div>')
 </script>
 </html>
