更新 fillKeys 文档和 demo

--- a/example/fillKeys.html
+++ b/example/fillKeys.html
@@ -8,7 +8,7 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(ecDo.fillKeys({a:'',b:0,c:11},[0,'',11],'**'));
-    console.log(ecDo.fillKeys({a:'',b:0,c:11,d:NaN},[0,'',NaN]));
+    console.log(ecDo.fillKeys({a:'',b:0,c:11,d:NaN},['',NaN],'*'));
 </script>
 </body>
 </html>
