--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -126,8 +126,8 @@
     //检测数据类型
     let tips=ecValidate.check([
         {
-            el:'[1,2,3,4,5]',
-            rules:[{rule:'isType:array',msg:'传进去的数组不是数组'}]
+            el:'0.123',
+            rules:[{rule:'isCount',msg:'传进去的不是有效数值类型'}]
         }
     ]);
     console.log(tips);
