--- a/example/checkPwdLevel.html
+++ b/example/checkPwdLevel.html
@@ -8,6 +8,7 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(ecDo.checkPwdLevel('asd188AS19663362_.'));
+    console.log(ecDo.checkPwdLevel('asd188AS19663362_.',[/[0-9]/, /[a-zA-Z]/, /[\.|-|_]/]));
 </script>
 </body>
 </html>
