--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -65,6 +65,7 @@
 <div id="form-box">
     <!--校验单个字段-->
     <div class="m-from-box">
+        <h3>校验单个字段</h3>
         <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo1.userName"></p>
         <p><input type="text" class="u-input-text" placeholder="请输入电话号码" v-model="demo1.userContact"></p>
         <p class="u-tips" :class="{'success':demo1.tips==='success'}">{{demo1.tips}}</p>
@@ -72,22 +73,24 @@
     </div>
     <!--单个字段，多个规则-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo2.userName"></p>
+        <h3>单个字段，多个规则</h3>
         <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo2.userContact"></p>
         <p class="u-tips" :class="{'success':demo2.tips==='success'}">{{demo2.tips}}</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit2"></p>
     </div>
     <!--单个字段，扩展规则-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo3.userName"></p>
+        <h3>单个字段，扩展规则-</h3>
+        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo3.pwd"></p>
         <p class="u-tips" :class="{'success':demo3.tips==='success'}">{{demo3.tips}}</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit3"></p>
     </div>
     <!--校验单个字段，带别名定位第一个有误数据-->
     <div class="m-from-box">
+        <h3>校验单个字段，带别名定位第一个有误数据</h3>
         <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo4.userName"
                   :class="{'err':demo4.tips.userName}"></p>
-        <p class="u-tips">{{demo4.tips.userName}}</p>
+        <p class="u-tips">{{demo4.tips.user}}</p>
         <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
                   :class="{'err':demo4.tips.contact}"></p>
         <p class="u-tips">{{demo4.tips.contact}}</p>
@@ -96,6 +99,7 @@
     </div>
     <!--校验全部-->
     <div class="m-from-box">
+        <h3>校验全部</h3>
         <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo5.userName"
                   :class="{'err':demo5.tips.userName}"></p>
         <p class="u-tips">{{demo5.tips.userName}}</p>
@@ -107,15 +111,10 @@
     </div>
     <!--单个输入，实时校验-->
     <div class="m-from-box">
+        <h3>单个输入，实时校验</h3>
         <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo6.userContact"
                   :class="{'err':demo6.tips&&demo6.tips!=='success'}"  @input="handleInput6"></p>
         <p class="u-tips" :class="{'success':demo6.tips==='success'}">{{demo6.tips}}</p>
-    </div>
-    <!--单个输入，实时校验-密码强度-->
-    <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo7.pwd"  @input="handleInput7"></p>
-        <p class="u-tips" :class="'lv'+demo7.tips" v-if="demo7.tips.constructor===Number">密码强度：{{demo7.tips}}</p>
-        <p class="u-tips" :class="'lv'+demo7.tips" v-else>{{demo7.tips}}</p>
     </div>
 </div>
 
@@ -150,7 +149,6 @@
                 tips: ''
             },
             demo2: {
-                userName: '守候',
                 userContact: '',
                 tips: ''
             },
@@ -172,10 +170,6 @@
                 userContact: '',
                 tips:'',
             },
-            demo7: {
-                pwd:'',
-                tips: '',
-            }
         },
         methods: {
             handleSubmit1(){
@@ -205,14 +199,6 @@
                 let _tips=ecValidate.check([
                     {
                         //校验的数据
-                        el: _this.demo2.userName,
-                        //校验的规则
-                        rules: [
-                            {rule: 'isNoNull', msg: '姓名不能为空'}
-                        ],
-                    },
-                    {
-                        //校验的数据
                         el: _this.demo2.userContact,
                         //校验的规则
                         rules: [
@@ -227,11 +213,11 @@
                 let _tips=ecValidate.check([
                     {
                         //校验的数据
-                        el: _this.demo3.userName,
+                        el: _this.demo3.pwd,
                         //校验的规则
                         rules: [
-                            {rule: 'isNoNull', msg: '姓名不能为空'},
-                            {rule: 'isChinese', msg: '姓名只能输出中文'}
+                            {rule: 'isNoNull', msg: '密码不能为空'},
+                            {rule: 'isPwd', msg: '请输入正确的密码格式'}
                         ],
                     }
                 ])
@@ -244,7 +230,7 @@
                     {
                         //校验的数据
                         el: _this.demo4.userName,
-                        alias: 'userName',
+                        alias: 'user',
                         //校验的规则
                         rules: [
                             {rule: 'isNoNull', msg: '姓名不能为空'}
@@ -300,24 +286,6 @@
                     },
                 ])
                 this.demo6.tips = _tips;
-            },
-            handleInput7(){
-                let _this = this;
-                let _tips=ecValidate.check([
-                    {
-                        //校验的数据
-                        el: _this.demo7.pwd,
-                        //校验的规则
-                        //由于检查密码强度规则 pwdLv 是实时返回密码强度，并非报错信息。所以该规则要放置在最后
-                        rules: [
-                            {rule: 'minLength:6', msg: '密码长度不能小于6'},
-                            {rule: 'maxLength:16', msg: '密码长度不能大于16'},
-                            {rule: 'pwdLv'}
-                        ]
-                    },
-                ])
-                //判断 _tips 是否是数字
-                this.demo7.tips = _tips.constructor===Number?+_tips:_tips;
             }
         },
         mounted:function () {
