--- a/example/encrypt.html
+++ b/example/encrypt.html
@@ -11,6 +11,14 @@
     console.log(`不加密字符|${ecDo.encryptUnStr('18819233362','3,7','+')}|`)
     console.log(`加密开始|${ecDo.encryptStartStr('18819233362','4')}|`)
     console.log(`加密结束|${ecDo.encryptEndStr('18819233362','4')}|`)
+    
+    
+
+
+    console.log(`加密字符|${ecDo.encrypt('18819233362','3,7','+')}|`)
+    console.log(`加密至结束|${ecDo.encrypt('18819233362','4')}|`)
+    console.log(`加密至开始|${ecDo.encrypt('18819233362','-4')}|`)
+    console.log(`不加密字符|${ecDo.encrypt(ecDo.encrypt('18819233362','0,2','+'),'0,-2','+')}|`)
 </script>
 </body>
 </html>
