1.ec-validate-beta 修复bug 2.增加 ec-validate-beta.3 版本

--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -148,6 +148,36 @@
     ]);
     console.log(tips1);
 
+    // let tips2=ecValidate.check([
+    //     {
+    //         data:'1234a56',
+    //         rules:{
+    //             'noEnglish':'不能包含英文',
+    //         }
+    //     }
+    // ]);
+    // console.log(tips2);
+
+    // let tips3=ecValidate.check([
+    //     {
+    //         data:'1881926601332',
+    //         rules:{
+    //             'isMobile':'请输入正确的邮箱格式',
+    //         }
+    //     }
+    // ]);
+    // console.log(tips3);
+
+    // let tips4=ecValidate.check([
+    //     {
+    //         data:'死阿萨德1',
+    //         rules:{
+    //             'isChinese':'请输入正确的中文格式',
+    //         }
+    //     }
+    // ]);
+    // console.log(tips4);
+
     new Vue({
         el: '#form-box',
         data: {
