1.重构clearkeys和更新测试用例 2.count测试用例更新

--- a/example/countStr.html
+++ b/example/countStr.html
@@ -9,6 +9,9 @@
 <script>
     let strTest='sad44654blog5a1sd67as9dablog4s5d16zxc4sdweasjkblogwqepaskdkblogahseiuadbhjcibloguyeajzxkcabloguyiwezxc967'
     console.log(ecDo.countStr(strTest,'blog'));
+
+    let strTest1='abbccc'
+    console.log(ecDo.count(strTest1));
 </script>
 </body>
 </html>
