--- a/example/clearKeys.html
+++ b/example/clearKeys.html
@@ -8,9 +8,9 @@
 <script src="../src/ec-do-3.0.0-beta.2.js"></script>
 <script>
     console.log(ecDo.clearKeys({a:'',b:0,c:11}));
-    console.log(ecDo.clearKeys({a:'',b:0,c:11},[]));
+    console.log(ecDo.clearKeys({a:'',b:0,c:'--'},['--','']));
     console.log(ecDo.clearKeys({a:'',b:0,c:11,d:false},[0,'']));
-    console.log(ecDo.clearKeys({a:NaN,d:2},[NaN]));
+    console.log(ecDo.clearKeys({a:NaN,b:2,c:undefined},[NaN,undefined]));
 </script>
 </body>
 </html>
